deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafter
  namespace: grafter
spec:
  selector:
    app: grafter
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
